fixed responsive issue on portfolio tile on mobile

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -343,6 +343,7 @@ i {
 .skillTiles, .codeLinks {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap; 
   justify-content: flex-start;
   padding: 10px 0; }
 
